--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -34,7 +34,7 @@ jobs:
           force: true
 
       - name : Push changes to output
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: output  
