--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,41 +1,26 @@
-name: Generate Snake
+name: Update GitHub Profile Stats
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+  push:
+    branches:
+      - main  # Adjust to your default branch
+  pull_request:
+    branches:
+      - main  # Adjust to your default branch
 
 jobs:
-  build:
+  update-readme:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: ravin00
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - run: git status
-
-      - name: Commit and Push changes
+      - name: Update README
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
-          git add dist/
-          git commit -m "Generate contribution snake"
-      - name: Push changes to master
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PAT_TOKEN }}  # Use PAT_TOKEN instead of GITHUB_TOKEN
-          branch: master
-          force: true
-
-      - name : Push changes to output
-        uses: ad-m/github-push-action@main
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: output  
-          force: true  
+          sed -i 's/username=ravin00/username=ravin00/g' README.md
+          git config --global user.name "ravin00"
+          git config --global user.email "ravinbandara76@gmail.com"
+          git add README.md
+          git commit -m "Update README stats"
+          git push
