--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,10 +3,10 @@ name: Update GitHub Profile Stats
 on:
   push:
     branches:
-      - main  # Adjust to your default branch
+      - main
   pull_request:
     branches:
-      - main  # Adjust to your default branch
+      - main
 
 jobs:
   update-readme:
@@ -16,11 +16,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Update README
+      - name: Set Up Git
         run: |
-          sed -i 's/username=ravin00/username=ravin00/g' README.md
           git config --global user.name "ravin00"
           git config --global user.email "ravinbandara76@gmail.com"
-          git add README.md
-          git commit -m "Update README stats"
+
+      - name: Update README
+        run: |
+          # Replace 'sed' if necessary, otherwise remove the line below
+          # sed -i 's/username=ravin00/username=ravin00/g' README.md
+
+          # Commit changes if any were made
+          git diff --quiet || (git add README.md && git commit -m "Update README stats")
+
+      - name: Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           git push
